--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,10 +24,10 @@ jobs:
             ${{ runner.os }}-
 
       - name: Setup Haskell
-        uses: haskell/actions/setup@v1
+        uses: haskell-actions/setup@v2
         with:
-          ghc-version: 9.2
-          cabal-version: 3.6
+          ghc-version: 9.6
+          cabal-version: 3.8
 
       - name: Publish package
         run: |
