--- a/.github/workflows/ubuntuCI.yml
+++ b/.github/workflows/ubuntuCI.yml
@@ -24,7 +24,7 @@ jobs:
           submodules: 'recursive'
 
       - name: Setup Haskell
-        uses: haskell/actions/setup@v2
+        uses: haskell-actions/setup@v2
         id: setup-haskell-cabal # <--- give it a name for later cache usage
         with:
           ghc-version: ${{ matrix.ghc }}
